Refactor getChildConsumptions
